<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/addProduct"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etAddProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="name"
        android:hint="@string/sectionTitle"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etAddProductUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="name"
        android:hint="@string/productUnit"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etAddProductWeekdaysAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="name"
        android:hint="@string/quantityInWeekdays"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etAddProductWeekendAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="Number"
        android:hint="@string/quantityInWeekend"
        android:inputType="number"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spProductDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectSection"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addProductDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

</LinearLayout>