<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/addSection"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/addSectionDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/sectionTitle"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/addSectionDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>


</LinearLayout>