<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.products_fragment.ProductsFragment">

    <Spinner
        android:id="@+id/sp_sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_section_with_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sp_sections"
        tools:listitem="@layout/section_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionButtonAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        android:contentDescription="@string/addProduct"
        android:src="@drawable/ic_add_product"
        app:layout_constraintBottom_toTopOf="@+id/actionButtonAdd"
        app:layout_constraintEnd_toEndOf="@+id/actionButtonAdd"
        android:focusable="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonAddSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        android:contentDescription="@string/addSection"
        android:src="@drawable/ic_add_section"
        app:layout_constraintBottom_toTopOf="@+id/actionButtonAddProduct"
        app:layout_constraintEnd_toEndOf="@+id/actionButtonAddProduct"
        android:focusable="true"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>